--- a/styles/post.css
+++ b/styles/post.css
@@ -1,11 +1,54 @@
 .post h1 {
-    @apply font-bold text-2xl pt-14
+    @apply font-bold text-2xl 
 }
 
 .post h2 {
-    @apply font-bold text-2xl pt-11
-}
+    @apply font-bold text-xl pt-11 scroll-mt-12
+} 
 
 .post h3 {
-    @apply font-semibold text-lg pt-8
+    @apply font-semibold text-lg pt-8 scroll-mt-12
+}
+
+.post ul {
+    @apply pt-5 px-3 list-disc 
+}
+ 
+.post p {
+    @apply text-neutral-700 dark:text-neutral-300
+}
+.post > p {
+    @apply pt-5 
+}
+
+.post ol {
+    @apply pt-5 list-decimal 
+}
+
+.post ol > *:not(:first-child), 
+.post blockquote > *:not(:first-child), 
+.post ul > *:not(:first-child) {
+    @apply pt-5
+}
+.post strong {
+    @apply font-extrabold
+}
+.post li {
+    @apply ml-10 text-neutral-700 dark:text-neutral-300
+}
+
+.post blockquote {      
+    @apply p-4 mt-5 bg-neutral-100 dark:bg-neutral-800 border-l-4 border-blue-700 dark:border-blue-900
+}
+
+.post table {
+      @apply table-auto w-full border-collapse mt-5;
+  }
+
+.post table th,
+.post table td {
+    @apply border border-neutral-200 dark:border-neutral-800 p-3 text-sm text-left;
+}
+.post table th {
+    @apply bg-neutral-100 dark:bg-neutral-800 font-medium;
 }
